[metadata]
name = ros_acomms
version = 8.0.1
author = whoi
author_email = egallimore@whoi.edu
description = ROS Acomms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.whoi.edu/acomms/ros_acomms/
project_urls =
    Bug Tracker = https://git.whoi.edu/acomms/ros_acomms/
    Documentation = https://acomms.pages.whoi.edu/ros_acomms/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = ros_acomms
packages = find:
python_requires = >=3.6
include_package_data=True

[options.packages.find]
where = ros_acomms