<?xml version="1.0"?>
<package format="2">
  <name>ros_acomms_msgs</name>
  <version>9.0.0</version>
  <description>ROS acomms messages</description>

  <!-- START package wide section -->
  <!-- MAINTAINERS, Copy changes made in this section of package.xml package wide -->
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="egallimore@whoi.edu">Eric Gallimore</maintainer>
  <maintainer email="cfitzgerald@whoi.edu">Caileigh Fitzgerald</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPLv3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://acomms.pages.whoi.edu/ros_acomms/</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="egallimore@whoi.edu">Eric Gallimore</author>
  <author email="cfitzgerald@whoi.edu">Caileigh Fitzgerald</author>
  <author email="dgiaya@whoi.edu">Dennis Giaya</author>
  <!-- MAINTAINERS, Copy changes made in this section of package.xml package wide -->
  <!-- END package wide section -->

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
